Fixed card gap

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,7 +31,7 @@ img {
 .row {
   display: flex;
   flex-wrap: wrap;
-  gap: 60px 20px;
+  gap: 20px;
   justify-content: center;
 }
 
